--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Who I am</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>I am Nagalingam Kuhan from Batticaloa,Sri Lanka.</p>
         </div>
       </div>
     </div>
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>What I do</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>I do programming and learning new skills every day , nothing can stop me learning new technologies in computer.</p>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="carousel-caption">
           <h1>Where can I go</h1>
-          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <p>I can go everywhere I wanted to to but needed ticket and visa,we do find alternate way.</p>
         </div>
       </div>
     </div>
